--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 	<style>
 h1 {
   color: blue;
-  font-family: verdana;
+  font-family: serif;
   font-size: 300%;
 }
 p {
   color: green;
-  font-family: courier;
-  font-size: 160%;
+  font-family: serif;
+  font-size: 130%;
 }
 </style>
 </head>
