--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ Skyline College San Bruno,
 Computer Engineering, GPA: 3.9 Expected May 2024
 • Activities & Societies: Engineering and Tech Scholars, Promise Scholars, Phi Theta Kappa
 Experience
+<img src="2024-02-23-132655.jpg" alt="pic ofme">
 <p style="background-color:Tomato;">
 Peer Instruction Leader Aug 2022 - Present
 Skyline College San Bruno, CA
