added thingy for webring

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
 <head> 
+  <script
+  src="https://cdn.jsdelivr.net/gh/diamondburned/libwebring@nightly/dist/webring-element.js"
+  type="module"
+></script>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/gh/diamondburned/libwebring@nightly/dist/webring.css"
+/>
 	<style>
 h1 {
   color: blue;
